Fixes pause background not covering on smaller screen

--- a/src/app/shared/components/pause-menu/pause-menu.component.css
+++ b/src/app/shared/components/pause-menu/pause-menu.component.css
@@ -1,7 +1,7 @@
 .c-pause-menu {
     width: 474px;
     height: 485px;
-    margin-top: 205px;
+    margin-top: 157px;
     background-color: var(--primary-purple2);
     border: 3px solid black;
     border-radius: 20px;
@@ -9,7 +9,7 @@
 }
 
 .c-pause-menu__background {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     z-index: 6;
